fix spacing index.html take II and FIN.

--- a/css/style.css
+++ b/css/style.css
@@ -93,8 +93,6 @@ i:hover {
 
 .navbar-custom {
     background-color: #171616;
-    padding-left: 40px;
-    padding-right: 40px;
 }
 
 .navbar-custom a {
